--- a/online/index.html
+++ b/online/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Among Us IRL</title>
+    <title>Online Play | Among Us IRL</title>
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
+    <div class="back" onclick="window.location.href='..'">&lt;</div>
     <div class="button">
         <div></div>
     </div>
-    <div class="title">Among Us IRL</div>
+    <div class="title">Among Us IRL Online</div>
     <div class="roles">
-        <button onClick="window.location.href = './one-device'">Play Offline</button>
-        <button onclick="window.location.href = './online'">Play Online</button>
+        <button onClick="window.location.href = './host'">Host Game</button>
+        <button onclick="window.location.href = './join'">Join Game</button>
     </div>
 </body>
 </html>
