--- a/online/host/index.html
+++ b/online/host/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Host a Game | Among Us IRL</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="../../style.css">
 </head>
 <body>
     <div class="title">Among Us IRL Online</div>
